--- a/style/main.scss
+++ b/style/main.scss
@@ -4,19 +4,23 @@
 
 h1,h2{
     position:relative;
-    padding-top: 20px;
-    left:40%;
+    left:20%;
     top:15%;
     width: 60%;
+    text-align: center;
 }
 
+h1{
+    font-size: xx-large;
+}
+ 
 header{
     div{
         @include position(100%,15%,0px,0px);
         background-color: $footer-header-color;
     };
     h1{
-        @include position(60%,15%,40%,0px);
+        @include position(60%,15%,18%,0px);
         color : #FFFF;
     };
 };
@@ -24,4 +28,44 @@ header{
 #whatcrm{
     position:relative;
     padding-top: 120px;
+    p{
+        position: relative;
+        width: 80%;
+        padding-left: 10%;
+        font-size: x-large;
+    }
 }
+
+#test{
+    background-color: $test-background;
+    margin-top: 210px;
+    height: 300px;
+    h1{
+        color: #FFFF;
+    }
+    button{
+        position: relative;
+        margin-top: 70px;
+        margin-left: 40%;
+        width: 20%;
+        height: 20%;
+        color: #FFFF;
+        background-color: $test-block;
+        font-size: large;
+    }
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    height:15%;
+    left: 0%;
+
+    background-color: $footer-header-color;
+    h3{
+        padding-top: 20px;
+        padding-left: 40%;
+        color: #FFFF;
+    }
+}
+
