--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,53 @@ header h1 {
   background-color: #1460AA;
   font-size: large;
 }
+#test button:hover {
+  background-color: rgb(116, 20, 20);
+  transition: all 0.7s ease;
+}
+
+#states {
+  margin-top: 210px;
+}
+#states div {
+  border-radius: 10px;
+  width: 70%;
+  height: 120px;
+  margin-top: 30px;
+  margin-left: 15%;
+  background-color: #707070;
+}
+#states div img {
+  margin-left: 30px;
+  margin-top: 10px;
+}
+#states div h2 {
+  margin-left: 30px;
+  margin-top: 10px;
+}
+#states button {
+  height: 90px;
+  width: 50%;
+  margin-left: 27%;
+  margin-top: 30px;
+  background-color: #1460AA;
+  color: white;
+  font-size: large;
+}
+#states button:hover {
+  font-size: x-large;
+  width: 70%;
+  height: 130px;
+  margin-left: 15%;
+  background-color: rgb(116, 20, 20);
+  transition: all 0.7s ease;
+}
 
 footer {
   position: relative;
+  margin-top: 180px;
   width: 100%;
-  height: 15%;
+  height: 90px;
   left: 0%;
   background-color: #404040;
 }
