--- a/style/main.scss
+++ b/style/main.scss
@@ -53,12 +53,54 @@ header{
         background-color: $test-block;
         font-size: large;
     }
+    button:hover{
+        background-color: rgb(116, 20, 20);
+        transition: all 0.7s ease;
+    }
+}
+
+#states{
+    margin-top: 210px;
+    div{
+        border-radius: 10px;
+        width: 70%;
+        height: 120px;
+        margin-top: 30px;
+        margin-left: 15%;
+        background-color: #707070;
+        img{
+            margin-left: 30px;
+            margin-top: 10px;
+        }
+        h2{
+            margin-left: 30px;
+            margin-top: 10px;
+        }
+    }
+    button{
+        height: 90px;
+        width: 50%;
+        margin-left: 27%;
+        margin-top: 30px;
+        background-color: $test-block;
+        color: #FFFF;
+        font-size: large;
+    }
+    button:hover{
+        font-size: x-large;
+        width:70%;
+        height: 130px;
+        margin-left: 15%;
+        background-color: rgb(116, 20, 20);
+        transition: all 0.7s ease;
+    }
 }
 
 footer{
     position: relative;
+    margin-top: 180px;
     width: 100%;
-    height:15%;
+    height:90px;
     left: 0%;
 
     background-color: $footer-header-color;
@@ -68,4 +110,5 @@ footer{
         color: #FFFF;
     }
 }
+
 
