--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,5 +1,19 @@
 $footer-header-color:#404040;
 $test-block:#1460AA;
 $test-background: #0F4880;
+$set-active: rgb(116, 20, 20);
+$states-color:#707070;
+
+/*$footer-header-color:#17181D;
+$test-block:#E09145;
+$test-background: #FCD9B8 ;
+$set-active: rgb(116, 20, 20);
+$states-color:#292C35;*/
+
+/*$footer-header-color:#4D555B;
+$test-block:#1B768E;
+$test-background: #012538 ;
+$set-active: rgb(116, 20, 20);
+$states-color:#7e7e7e;*/
 
 
