--- a/style/main.scss
+++ b/style/main.scss
@@ -54,7 +54,7 @@ header{
         font-size: large;
     }
     button:hover{
-        background-color: rgb(116, 20, 20);
+        background-color: $set-active;
         transition: all 0.7s ease;
     }
 }
@@ -67,7 +67,7 @@ header{
         height: 120px;
         margin-top: 30px;
         margin-left: 15%;
-        background-color: #707070;
+        background-color: $states-color;
         img{
             margin-left: 30px;
             margin-top: 10px;
@@ -91,7 +91,7 @@ header{
         width:70%;
         height: 130px;
         margin-left: 15%;
-        background-color: rgb(116, 20, 20);
+        background-color: $set-active;
         transition: all 0.7s ease;
     }
 }
@@ -101,7 +101,7 @@ footer{
     margin-top: 180px;
     width: 100%;
     height:90px;
-    left: 0%;
+    left: 0px;
 
     background-color: $footer-header-color;
     h3{
